# maze_runner

./: .gitignore  CMakeLists.txt  README.md  build.py  config.ini  config_loader.cpp  config_loader.h  maze_generation.cpp  maze_generation.h  maze_generation_module.cpp  maze_generation_module.h  maze_generator.cpp  maze_solver.cpp  maze_solver.h
.agent/: AGENTS.md
apps/maze_android/: README.md  settings.gradle.kts
apps/maze_android/app/: build.gradle.kts  proguard-rules.pro
apps/maze_cli/: README.md
apps/maze_cli/common/: version.hpp
apps/maze_cli/src/: main.cpp
apps/maze_win_gui/: OPEN_SOURCE_LICENSES.md  README.md
apps/maze_win_gui/common/: version.hpp
apps/maze_win_gui/src/: main.cpp
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  MazeGeneratorConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build_release/config/: config.toml
cmake/: Compiler.cmake  Install.cmake  MazeGeneratorConfig.cmake.in  Messages.cmake  Options.cmake  PostBuild.cmake  Targets.cmake  Tests.cmake  Tools.cmake
config/: config.ini  config.toml
docs/: HISTORY.md  TODO.md
docs/architecture/: dependency_directions.md  refactor_dod.md  responsibility_modules.md
docs/history/v0.1/: 0.1.0.md
docs/history/v0.2/: v0.2.0.md  v0.2.1.md  v0.2.2.md
docs/history/v0.3/: v0.3.0.md
lib/stb/: .gitattributes
libs/maze_api_c/api/: maze_api.cpp  maze_api.h
libs/maze_core/: README.md
libs/maze_core/common/: kernel_version.hpp.in
libs/maze_core/config/: config.h
libs/maze_core/domain/: grid_topology.cpp  grid_topology.h  maze_generation.cpp  maze_generation_algorithms_internal.h  maze_generation_dfs.cpp  maze_generation_factory.cpp  maze_generation_grid_ops.cpp  maze_generation_grid_ops.h  maze_generation_growing_tree.cpp  maze_generation_kruskal.cpp  maze_generation_prims.cpp  maze_generation_recursive_division.cpp  maze_solver.cpp  maze_solver.h  maze_solver_algorithms.h  maze_solver_astar.cpp  maze_solver_bfs.cpp  maze_solver_common.cpp  maze_solver_common.h  maze_solver_dfs.cpp  maze_solver_dijkstra.cpp  maze_solver_event_emitter.cpp  maze_solver_event_emitter.h  maze_solver_greedy.cpp  maze_solver_grid_utils.cpp  maze_solver_grid_utils.h  maze_solver_neighbors.cpp  maze_solver_neighbors.h  maze_solver_result_builder.cpp  maze_solver_result_builder.h
libs/maze_export/export/: maze_export.cpp  maze_export.h
libs/maze_infra/: README.md
libs/maze_infra/config/: config_loader.cpp
libs/maze_infra/graphics/: maze_renderer.cpp  render_layout.cpp  render_layout.h  render_output_png.cpp  render_output_png.h  render_palette.cpp  render_palette.h  render_raster.cpp  render_raster.h
libs/maze_usecase/usecase/: maze_pipeline.cpp  maze_pipeline.h
platform/android/native/: CMakeLists.txt  README.md  maze_jni_bridge.cpp  maze_jni_bridge.h
scripts/: build.py  build.sh  build_and_test.py  build_fast.sh  build_release.sh  build_tidy.sh  format.sh
scripts/builder/: core.py  task_splitter.py
scripts/devtools/loc/: .gitignore  README.md  ci_check.py  scan_lines.toml
src/: main.cpp
src/application/services/: maze_generation.cpp  maze_generation.h  maze_solver.cpp  maze_solver.h
src/cli/commands/: generation_algorithms_command.cpp  generation_algorithms_command.h  search_algorithms_command.cpp  search_algorithms_command.h  version_command.h
src/cli/framework/: cli_app.cpp  cli_app.h
src/common/: pch.cpp  pch.h  version.hpp
src/config/: config.h  config_loader.cpp  config_loader.h
src/domain/: maze_generation.cpp  maze_generation.h  maze_grid.h  maze_solver.cpp  maze_solver.h  maze_solver_astar.cpp  maze_solver_bfs.cpp  maze_solver_common.cpp  maze_solver_common.h  maze_solver_dfs.cpp  maze_solver_dijkstra.cpp  maze_solver_greedy.cpp
src/generation/: maze_generation.cpp  maze_generation.h
src/infrastructure/config/: config_loader.cpp  config_loader.h
src/solver/: maze_solver.cpp  maze_solver.h
test/: cli_app_test.cpp  config_loader_test.cpp  grid_topology_test.cpp  maze_api_c_test.cpp  maze_runtime_context_test.cpp  render_artifact_test.cpp  render_buffer_test.cpp  solver_algorithms_test.cpp  solver_event_emitter_test.cpp  solver_result_builder_test.cpp  test_cases.h  test_main.cpp  win_gui_parser_test.cpp  win_gui_rasterizer_test.cpp  win_gui_state_store_test.cpp
tests/artifact/: README.md
tests/contracts/: README.md  json_request_smoke_v1.json
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/package_consumer_c_api/: CMakeLists.txt  main.cpp
tests/unit/: README.md
(+26 files in other folders)
